# todo-cli

todo-cli/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.cpp  task.h
